# relatable

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  requirements.txt
.github/workflows/: release.yml  rltbl-test-postgres.yaml  rltbl-test-rusqlite.yaml  rltbl-test-sqlx-postgres.yaml  rltbl-test-sqlx-sqlite.yaml  rltbl-test-sqlx.yaml  rltbl-test.yaml  rltbl-tests.yaml
doc/: git.md  history.md  message.md  web.md
rltbl-frontend/: config-overrides.js  package-lock.json  package.json
rltbl-frontend/src/: Dropdown.tsx  Grid.tsx  index.js
src/: cli.rs  core.rs  git.rs  lib.rs  main.rs  select.rs  sql.rs  table.rs  test.rs  web.rs
src/resources/: main.css  main.js
src/templates/: cell_menu.html  column_menu.html  page.html  row_menu.html  table.html
test/: example_commands.sh  history.md  menguin.tsv  nulltype.md  random.sh  web.md
test/history/: afreen.sh  ahmed.sh  barbara.sh  mike.sh  wrapper.sh
test/round_trip/: penguin.tsv
test/tesh/common/: history.md  joined_query.md  message_extra.md  postgres-header._md  select.md  sqlite-header._md  web.md
test/tesh/postgres_only/: message_postgres.md  nulltype_postgres.md
test/tesh/sqlite_only/: nulltype.md
