[package]
name = "rltbl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-std = { version = "1.13.0", features = ["attributes"] }
axum = "0.7.9"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
http = "1.2.0"
indexmap = { version = "2.7.0", features = ["serde"] }
minijinja = { version = "2.5.0", features = ["preserve_order", "json", "urlencode"] }
rand = "0.8.5"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"], optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite"], optional = true }
sqlx-core = { version = "0.8.2", optional = true }
tabwriter = "1.4.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["rusqlite"]
rusqlite = ["dep:rusqlite"]
sqlx = ["dep:sqlx", "dep:sqlx-core"]
