# # To list upgradeable dependencies (see https://lib.rs/crates/cargo-upgrades):
# cargo install -f cargo-upgrades
# cargo upgrades

[package]
name = "rltbl"
repository = "https://github.com/rltbl/relatable"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rltbl"
path = "src/main.rs"

[[bin]]
name = "rltbl_test"
path = "src/test.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.94"
async-std = { version = "1.13.0", features = ["attributes"] }
axum = "0.8.1"
axum_session = "0.16.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
double-map = "0.14"
csv = "1.3"
enquote = "1.1.0"
futures = "0.3"
http = "1.2.0"
indexmap = { version = "2.7.0", features = ["serde"] }
lazy_static = "1.4"
minijinja = { version = "2.5.0", features = ["preserve_order", "json", "urlencode", "loader"] }
promptly = "0.3"
rand = "0.8.5"
random_color = "1.0.0"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"], optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std", "any", "sqlite", "postgres"], optional = true }
sqlx-core = { version = "0.8.3", optional = true }
tabwriter = "1.4.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
whoami = "1.5.2"

[features]
default = ["rusqlite"]
rusqlite = ["dep:rusqlite"]
sqlx = ["dep:sqlx", "dep:sqlx", "dep:sqlx-core"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
